--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -129,6 +129,7 @@
     {% block javascript %}
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+      <script src="{% static 'js/vue-clipboard.min.js' %}"></script>
       <script src="{% static 'js/selectize.js' %}"></script>
       <script src="{% static 'js/project.js' %}"></script>
       <script src="{% static 'js/vue-readux.js' %}"></script>
