--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -163,8 +163,8 @@
 
         {% if user_annotation_count > 0 %}
         <div class="rx-info-content">
-          <form action="{% url 'export' volume.pid %}" class="button_to" method="GET">
-            <input class="rx-action-btn rx-remove-default" type="submit" value="Export Annotation(s)" title="Export in a variety of formats" />
+          <form action="{% url 'export' volume.pid %}" class="button_to" method="GET" id="rx-annotation-export-form">
+            <a class="rx-action-btn" href="#" onclick="rxFormSubmit('rx-annotation-export-form');">Export Annotations</a>
             {% csrf_token %}
           </form>
         </div>
