--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -34,7 +34,13 @@
  {% for value in user_annotation_count %}
  {% if volume.pid in value %}
  {% if "0" not in value|safe|slice:"-3:-1" %}
+<!-- 
  <button style="background-color:green;color:white;"> {{ value|safe|slice:"-3:-1" }} </button>
+ -->
+ <span class="count-icon">
+ <span class="uk-icon" uk-icon="icon: comments; ratio: 1.5" uk-tooltip="title: Number of your annotations; pos: bottom"></span>
+ <span class="count">{{ value|safe|slice:"-3:-1" }}</span>
+ </span>
  {% endif %}
  {% endif %}
  {% endfor %}
@@ -56,7 +62,13 @@ Publication City: {{volume.published_city}}</p>
  {% for value in user_annotation_count %}
  {% if volume.pid in value %}
  {% if "0" not in value|safe|slice:"-3:-1" %}
+<!-- 
  <button style="background-color:green;color:white;"> {{ value|safe|slice:"-3:-1" }} </button>
+ -->
+ <span class="count-icon">
+ <span class="uk-icon" uk-icon="icon: comments; ratio: 1.5" uk-tooltip="title: Number of your annotations; pos: bottom"></span>
+ <span class="count">{{ value|safe|slice:"-3:-1" }}</span>
+ </span>
  {% endif %}
  {% endif %}
  {% endfor %}
@@ -73,4 +85,22 @@ Publication City: {{volume.published_city}}</p>
 
 </div>
 </div>
+<style>
+.count-icon {
+    display: inline-block;
+    position: relative;
+}
+
+.count {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding-top: 20%;
+    padding-right: 20%;
+    height: 10px;
+    width: 10px;
+    font-size: 10px;    
+    text-align: center;
+}
+</style>
 {% endblock content %}
