add volumes link to the breadcrumb

--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -170,7 +170,7 @@
     {% endif %}
     {% endfor %}
 
-    <a class="nav-link" href="#">
+    <a class="nav-link" href="/volumes/">
       <div class="rx-btn rx-btn-extension">Show All Volumes <i class="fas fa-chevron-right"></i></div>
     </a>
 
