--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -971,8 +971,7 @@ p {
   margin: auto;
   background-position: center;
   background-size: cover;
-  background-image: url(https://images.unsplash.com/photo-1513407030348-c983a97b98d8?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=477ae5a62fd5ade3f1e3a08c013af882&auto=format&fit=crop&w=1502&q=80);
-  width: 200px;
+  width: 100%;
   height: 200px;
 }
 
@@ -1031,4 +1030,44 @@ p {
 
 .rx-email-status {
   
+}
+
+.rx-collection-title {
+  font-weight: bold;
+  color: #707070;
+
+}
+
+/* Grid layout */ 
+
+.rx-grid {
+  display: grid;
+  margin: 20px auto;
+  max-width: 1400px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-column-gap: 60px;
+  /* justify-content: space-between; */
+}
+
+
+.rx-grid-layout {
+  /* border: 1px solid black; */
+  /* text-align: center; */
+  height: 475px;
+  width: 300px;
+  margin: 15px;
+  position: relative;
+  background: white;
+}
+
+.rx-grid:hover {
+
+}
+
+.rx-grid-image-container>img {
+  object-fit: cover;
+  height: 400px;
+  /* width: 200px; */
+  width: 100%;
+  /* height: 100%; */
 }
