--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -1069,3 +1069,51 @@ p {
   width: 100%;
   /* height: 100%; */
 }
+
+
+/* Banner Layout */
+.rx-banner-layout {
+  display: grid;
+  margin: 20px auto;
+  max-width: 100%;
+  /* grid-template-columns: repeat(auto-fill, minmax(100%, 1fr)); */
+  grid-template-columns: 1fr;
+  /* grid-column-gap: 15px; */
+  /* justify-content: space-between; */
+}
+
+.rx-volume-in-banner {
+  /* border: 1px solid black; */
+  /* text-align: center; */
+  /* height: 150px; */
+  width: 100%;
+  margin: 15px 0;
+  position: relative;
+  background: black;
+}
+
+.rx-banner-image-container > img {
+  object-fit: cover;
+  height: 150px;
+  /* width: 200px; */
+  width: 100%;
+  /* height: 100%; */
+  opacity: 0.4;
+}
+
+.rx-banner-text-container {
+  position:absolute;
+  left:0;
+  bottom:0;
+  padding: 1rem;
+  color: #eeeeee;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.rx-title-tagline-banner {
+  color: #eeeeee;
+}
+
+.rx-collection-title-banner {
+  color: white;
+}
