--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -56,7 +56,7 @@
             <!-- nav head -->
             <ul class="uk-tab" uk-switcher>
               <li><a href="#">{{ qs1|length }} hits in text</a></li>
-              <li><a href="#">{{ user_annotation_page_count }} annotations on page</a></li>
+              <li><a href="#">{{ qs2|length }} hits in your annotations</a></li>
             </ul>
             <!-- end of nav head -->
             <!-- nav body -->
