--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -21,7 +21,7 @@
     <div class="rx-title-container">
       <ul class="rx-breadcrumb uk-text-truncate">
         <li class="rx-breadcrumb-item"><a href="/" alt="Home">Home</a></li>
-        <li class="rx-breadcrumb-item"><a href="/collections/" alt="Home">Collections</a></li>
+        <li class="rx-breadcrumb-item"><a href="/{{ collectionlink.slug }}" alt="Home">Collections</a></li>
         <li class="rx-breadcrumb-item">{{ collection.label }}</li>
       </ul>
       <div class="rx-title">{{ collection.label }}</div>
