--- a/apps/templates/cms/collections_page.html
+++ b/apps/templates/cms/collections_page.html
@@ -4,17 +4,17 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
+<div class="rx-title-container">
+  <ul class="rx-breadcrumb uk-text-truncate">
+    <li class="rx-breadcrumb-item"><a href="/" alt="Home">Home</a></li>
+    <li class="rx-breadcrumb-item">Collections</li>
+  </ul>
+
+  <div class="rx-title">{{ page.page_title }}</div>
+  <div class="rx-title-tagline">{{page.tagline}}</div>
+</div>
+
 <div class="rx-head-container">
-  <div class="rx-title-container">
-    <ul class="rx-breadcrumb uk-text-truncate">
-      <li class="rx-breadcrumb-item"><a href="/" alt="Home">Home</a></li>
-      <li class="rx-breadcrumb-item">Collections</li>
-    </ul>
-
-    <div class="rx-title">{{ page.page_title }}</div>
-    <div class="rx-title-tagline">{{page.tagline}}</div>
-  </div>
-
   <p>{{ page.paragraph }}</p>
 </div>
 
@@ -87,6 +87,8 @@
   </div>
 </div>
 {% endif %}
+
+{% include "footer.html" %}
 
 
 {% endblock content %}
