--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -19,9 +19,9 @@
 
 {% block viewer %}
 
-<div class="uk-flex-middle" uk-grid>
+<div class="uk-flex-middle" uk-grid data-uk-grid-match>
   <div class="uk-width-2-3@m uk-flex-first">
-    <div id="viewer"></div>
+    <div id="viewer" style="max-height: 80vh"></div>
   </div>
 
   <div class="uk-width-1-3@m rx-info-container">
@@ -235,20 +235,6 @@
 {% block extra_javascript %}
 <script src="{% static 'mirador/mirador.js' %}"></script>
 <script type="text/javascript">
-
-  $(".rx-label-copy").click(function () {
-    copyToClipboard(this.parentElement.parentElement.parentElement.lastElementChild.lastElementChild.href);
-  });
-
-  function copyToClipboard(text) {
-    var placeholder = document.createElement("textarea");
-    document.body.appendChild(placeholder);
-    placeholder.value = text;
-    placeholder.select();
-    document.execCommand("copy");
-    document.body.removeChild(placeholder);
-  }
-
   $(function () {
     Mirador({
       "id": "viewer",
@@ -290,18 +276,8 @@
       {% endif %}
       "annotationEndpoint": { "name":"Readux", "module": "ReaduxEndpoint" }
     });
+    
   });
 
-// var topHeight = $(".uk-navbar").height() + $(".rx-title-container").height() + $(".uk-navbar").height();
-//   $('#viewer').css({ height: `calc(100% - ${topHeight}px)` });
-
-//   var offset = 11;
-//   var height = $("#viewer").height() + offset;
-//   $(".rx-info-container").height(height);
-
-//   $(window).resize(function () {
-//     var height = $("#viewer").height() + offset;
-//     $(".rx-info-container").height(height);
-//   });
 </script>
 {% endblock extra_javascript %}
